--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -145,7 +145,7 @@
             <figure class="left" style="width: 200px">
                 <img src="https://i.ibb.co/HY0BqLc/image.png" />
                 <figcaption>
-                    Zdjęcie użyte w gazecie ,,Pieczarska Prawda" 11 września 2023 roku, ukazujące odgruzowywanie ulicy Ślepej
+                    Zdjęcie użyte w gazecie „Pieczarska Prawda” 11 września 2023 roku, ukazujące odgruzowywanie ulicy Ślepej
                 </figcaption>
             </figure>
             <p>
