--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -93,7 +93,7 @@
                 </tr>
                 <tr>
                     <th>Burmistrz</th>
-                    <td>XYZ</td>
+                    <td>Mikołaj Bniewski</td>
                 </tr>
                 <tr>
                     <th>Liczba ludności</th>
