--- a/wiki/mirosław_długoszyjny/index.html
+++ b/wiki/mirosław_długoszyjny/index.html
@@ -68,7 +68,7 @@
                 </tbody>
             </table>
             <p>
-                Hacker i dawny agent służący dla nieznanych osób (ur. 1978 w Lipawie, zm. 2023 rozstrzelany pod Pregołą). Jego rozstrzelanie ujawniło zbrodnie służb Iznotii w 2023 roku, gdyż Długoszyjny miał schowaną małą kamerkę.
+                Haker i dawny agent służący dla nieznanych osób (ur. 1978 w Lipawie, zm. 2023 rozstrzelany pod Pregołą). Jego rozstrzelanie ujawniło zbrodnie służb Iznotii w 2023 roku, gdyż Długoszyjny miał schowaną małą kamerkę.
             </p>
             <h2>Dzieciństwo i wczesna dorosłość</h2>
             <p>
