--- a/radio/port_wilhelm_city_radio/index.html
+++ b/radio/port_wilhelm_city_radio/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rockford Times FM - Fangea i inne kontynenty</title>
+    <title>Port Wilhelm City Radio - Fangea i inne kontynenty</title>
     <link
         href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
         rel="stylesheet">
@@ -21,14 +21,15 @@
     </header>
     <main class="radio-player-container">
     <div id="radio-player">
-    <img id="radio-logo" src="https://i.ibb.co/gwPTQ65/rokford-czasy.webp">
+    <img id="radio-logo" src="https://i.ibb.co/fnG9PTg/image.png">
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
-                <h1>Rockford Times FM⠀⠀⠀</h1>
+                <h1>Port Wilhelm City Radio⠀⠀⠀</h1>
             </div>
             <ul>
-                <li>Informacje</li>
+                <li>Hip-Hop</li>
+                <li>R&B</li>
                 <li>Język Angielski</li>
             </ul>
             <span>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.</span>
