--- a/radio/index.html
+++ b/radio/index.html
@@ -107,6 +107,12 @@
                         <span>Rockford Times 2 FM</span>
                     </li>  
                 </a>
+                <a href="https://grumqy.github.io/fangea/radio/port_wilhelm_city_radio">
+                    <li>
+                        <img src="https://i.ibb.co/fnG9PTg/image.png">
+                        <span>Port Wilhelm City Radio</span>
+                    </li>  
+                </a>
                 <a href="https://grumqy.github.io/fangea/radio/wild_west_radio/">
                     <li>
                         <img src="https://i.ibb.co/55Y2NLy/wildwestradio.png">
