--- a/radio/みどり_fm/index.html
+++ b/radio/みどり_fm/index.html
@@ -21,7 +21,9 @@
     </header>
     <main class="radio-player-container">
     <div id="radio-player">
-    <img id="radio-logo" src="https://i.ibb.co/db8fWq5/radio-makronezja.png">
+        <div id="radio-logo">
+            <img src="https://i.ibb.co/db8fWq5/radio-makronezja.png">
+        </div>
     <div id="radio-data">
         <div id="radio-data-text">
             <div id="radio-name-container">
