--- a/radio/index.html
+++ b/radio/index.html
@@ -104,7 +104,7 @@
     <div>Filtruj wg gatunku</div>
     <ul>
         <form>
-        <input type="checkbox" id="genre_all" class="checkbox_select_all" data-categories="loc_pampersia;loc_nadmorze;loc_sudfangea;loc_montecydja;loc_iznotia;loc_pieczaria;loc_halandia" checked>
+        <input type="checkbox" id="loc_all" class="checkbox_select_all" data-categories="loc_pampersia;loc_nadmorze;loc_sudfangea;loc_montecydja;loc_iznotia;loc_pieczaria;loc_halandia" checked>
         <input type="checkbox" id="loc_pampersia" checked>
         <input type="checkbox" id="loc_nadmorze" checked>
         <input type="checkbox" id="loc_sudfangea" checked>
@@ -113,7 +113,7 @@
         <input type="checkbox" id="loc_pieczaria" checked>
         <input type="checkbox" id="loc_halandia" checked>
         </form>
-        <label for="genre_all" class="active">
+        <label for="loc_all" class="active">
             <li>Wszystkie</li>
         </label>
         <label for="loc_pampersia" class="active">
