--- a/radio/index.html
+++ b/radio/index.html
@@ -201,7 +201,7 @@
         <label for="genre_randb" class="active">
             <li>R&B</li>
         </label>
-        <label for="genre_citypop" class="active">
+        <label for="genre_lofi" class="active">
             <li>Lo-fi</li>
         </label>
         <label for="genre_phonk" class="active">
