--- a/radio/index.html
+++ b/radio/index.html
@@ -160,7 +160,7 @@
             <li>J. niemiecki</li>
         </label>
         <label for="lang_jp" class="active">
-            <li>J. japonski</li>
+            <li>J. japoński</li>
         </label>
     </ul>
     <div>Filtruj wg gatunku</div>
@@ -197,6 +197,9 @@
         </label>
         <label for="genre_hiphop" class="active">
             <li>Hip-Hop</li>
+        </label>
+        <label for="genre_breakbeat" class="active">
+            <li>Breakbeat</li>
         </label>
         <label for="genre_randb" class="active">
             <li>R&B</li>
