--- a/radio/index.html
+++ b/radio/index.html
@@ -101,7 +101,7 @@
     </header>
     <main class="radio">
     <div id="radio-nav" style="z-index: 10; position: relative;">
-    <div>Filtruj wg gatunku</div>
+    <div>Filtruj wg lokalizacji</div>
     <ul>
         <form>
         <input type="checkbox" id="loc_all" class="checkbox_select_all" data-categories="loc_pampersia;loc_nadmorze;loc_sudfangea;loc_montecydja;loc_iznotia;loc_pieczaria;loc_halandia" checked>
