--- a/wiki/łukasz_lukasox/index.html
+++ b/wiki/łukasz_lukasox/index.html
@@ -45,7 +45,7 @@
                     Rzeczpospolita Pampersia
                 </caption>
                 <tbody>
-                    <tr>
+                    <tr class="center">
                         <td colspan="2">
                             <img data-description="Łukasz Lukasox" src="https://i.ibb.co/1z8jRGR/cipicpi.png" />
                         </td>
@@ -90,9 +90,8 @@
                         </th>
                     </tr>
                     <tr class="center">
-                        <td colspan="2">odznaczenia</td>
+                        <td colspan="2"><img class="icon small" src="https://i.ibb.co/j6PMc5V/3.png"><img class="icon small" src="https://i.ibb.co/3fSfr7s/2.png"><img class="icon small" src="https://i.ibb.co/3fSfr7s/2.png"><img class="icon small" src="https://i.ibb.co/NKK6kcz/4.png"><img class="icon small" src="https://i.ibb.co/9qdR4Gy/1.png"></td>
                     </tr>
-
                 </tbody>
             </table>
             <p>
