--- a/wiki/łukasz_lukasox/index.html
+++ b/wiki/łukasz_lukasox/index.html
@@ -133,7 +133,7 @@
             <figure class="right" style="width: 200px">
                 <img src="https://i.ibb.co/BL8CfbY/hhhh.png" />
                 <figcaption>
-                    Fasada złotego drapacza, mieszczącego min. Siedzibę Lukasox International Corporation
+                    Fasada „Złotego Drapacza”, mieszczącego min. Siedzibę Lukasox International Corporation
                 </figcaption>
             </figure>
             <h2>Filmografia</h2>
