--- a/wiki/łukasz_lukasox/index.html
+++ b/wiki/łukasz_lukasox/index.html
@@ -147,39 +147,39 @@
                     </th>
                 </tr>
                 <tr>
-                    <th>Tytuł</th>
-                    <th>Rola</th>
-                    <th>Rok</th>
+                    <td>Tytuł</td>
+                    <td>Rola</td>
+                    <td>Rok</td>
                 </tr>
                 <tr>
-                    <th>Pewnego razu w dzikiej metropolii</th>
-                    <th>On sam</th>
-                    <th>1989</th>
+                    <td>Pewnego razu w dzikiej metropolii</td>
+                    <td>On sam</td>
+                    <td>1989</td>
                 </tr>
                 <tr>
-                    <th>Przełamując granice</th>
-                    <th>On sam</th>
-                    <th>1990</th>
+                    <td>Przełamując granice</td>
+                    <td>On sam</td>
+                    <td>1990</td>
                 </tr>
                 <tr>
-                    <th>Sekrety lata</th>
-                    <th>VIP</th>
-                    <th>1994</th>
+                    <td>Sekrety lata</td>
+                    <td>VIP</td>
+                    <td>1994</td>
                 </tr>
                 <tr>
-                    <th>Sekrety tajemniczej wyspy</th>
-                    <th>On sam</th>
-                    <th>1996</th>
+                    <td>Sekrety tajemniczej wyspy</td>
+                    <td>On sam</td>
+                    <td>1996</td>
                 </tr>
                 <tr>
-                    <th>Sztuka marzeń</th>
-                    <th>VIP</th>
-                    <th>2011</th>
+                    <td>Sztuka marzeń</td>
+                    <td>VIP</td>
+                    <td>2011</td>
                 </tr>
                 <tr>
-                    <th>Niesamowity sen</th>
-                    <th>On sam</th>
-                    <th>2018</th>
+                    <td>Niesamowity sen</td>
+                    <td>On sam</td>
+                    <td>2018</td>
                 </tr>
                 <tr class="center">
                     <th colspan="3">
@@ -187,14 +187,14 @@
                     </th>
                 </tr>
                 <tr>
-                    <th>Kod tajemnicy</th>
-                    <th>On sam</th>
-                    <th>2000</th>
+                    <td>Kod tajemnicy</td>
+                    <td>On sam</td>
+                    <td>2000</td>
                 </tr>
                 <tr>
-                    <th>Sztuka marzeń</th>
-                    <th>On sam</th>
-                    <th>2007</th>
+                    <td>Miasto Cieni</td>
+                    <td>On sam</td>
+                    <td>2007</td>
                 </tr>
             </table>
             <h1>Działalność polityczna</h1>
