--- a/wiki/łukasz_lukasox/index.html
+++ b/wiki/łukasz_lukasox/index.html
@@ -147,9 +147,9 @@
                     </th>
                 </tr>
                 <tr>
-                    <td>Tytuł</td>
-                    <td>Rola</td>
-                    <td>Rok</td>
+                    <th>Tytuł</th>
+                    <th>Rola</th>
+                    <th>Rok</th>
                 </tr>
                 <tr>
                     <td>Pewnego razu w dzikiej metropolii</td>
