--- a/wiki/łukasz_lukasox/index.html
+++ b/wiki/łukasz_lukasox/index.html
@@ -90,7 +90,7 @@
                         </th>
                     </tr>
                     <tr class="center">
-                        <td colspan="2"><img class="icon large" src="https://i.ibb.co/j6PMc5V/3.png"><img class="icon large" src="https://i.ibb.co/3fSfr7s/2.png"><img class="icon large" src="https://i.ibb.co/3fSfr7s/2.png"><img class="icon large" src="https://i.ibb.co/NKK6kcz/4.png"><img class="icon large" src="https://i.ibb.co/9qdR4Gy/1.png"></td>
+                        <td colspan="2"><img class="icon large" src="https://i.ibb.co/j6PMc5V/3.png"><img class="icon large" src="https://i.ibb.co/3fSfr7s/2.png"><img class="icon large" src="https://i.ibb.co/NKK6kcz/4.png"><img class="icon large" src="https://i.ibb.co/9qdR4Gy/1.png"></td>
                     </tr>
                 </tbody>
             </table>
