--- a/wiki/łukasz_lukasox/index.html
+++ b/wiki/łukasz_lukasox/index.html
@@ -42,7 +42,7 @@
             <h1>Łukasz Lukasox</h1>
             <table class="infobox">
                 <caption>
-                    Rzeczpospolita Pampersia
+                    Łukasz Lukasox
                 </caption>
                 <tbody>
                     <tr class="center">
