--- a/wiki/łukasz_lukasox/index.html
+++ b/wiki/łukasz_lukasox/index.html
@@ -262,7 +262,7 @@
             <p>
                 Pierwsza tura zakończyła się zwycięstwem Lukasoxa któremu brakowało 4,3% do zwycięstwa bez drugiej tury, jego kontrkandydat zdobył 22,9%. Przez liczne kontrowersje oraz porażki w kampanii wyborczej, Lukasox osądził komisję o sfałszowanie wyborów oraz o ustawienie wcześniejszej walki bokserskiej między nim a Karolem Hoszjakiem.
             </p>
-            <h2>## Wybory prezydenckie w lato 2023</h2>
+            <h2>Wybory prezydenckie w lato 2023</h2>
             <p>
                 Łukasz Lukasox ponownie w parku w Pamperbergu, podczas przemówienia zapowiedział start w wyborach prezydenckich które nastąpiły poprzez rezygnacje prezydenta Adriana Skoczka.
             </p>
