--- a/wiki/index.html
+++ b/wiki/index.html
@@ -47,6 +47,7 @@
                 <h1>Postacie</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/disco_babushka/">Joanna „Disco Babushka” Świtek</a></li>
                 <li><a href="https://grumqy.github.io/fangea/wiki/mirosław_długoszyjny/">Mirosław Długoszyjny</a></li>
+                <li><a href="https://grumqy.github.io/fangea/wiki/łukasz_lukasox/">Łukasz Lukasox</a></li>
             </ul> 
             <ul class="article-category">
                 <h1>Miasta</h1>
