--- a/mapa/index.html
+++ b/mapa/index.html
@@ -7,11 +7,17 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="https://unpkg.com/leaflet/dist/leaflet.css" />
   <link rel="stylesheet" href="https://unpkg.com/leaflet-draw/dist/leaflet.draw.css" />
-  <link rel="stylesheet" href="../style.css">
   <script src="https://unpkg.com/leaflet/dist/leaflet.js"></script>
   <script src="https://unpkg.com/leaflet-draw/dist/leaflet.draw.js"></script>
   <title>Mapa - Fangea i inne kontynenty</title>
-  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:600&display=swap">
+  <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+  <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat+Alternates:wght@100;200;300;400;500;600;700;800;900&display=swap"
+        rel="stylesheet">
+  <link rel="stylesheet" href="/fangea/style.css" />
+  <script src="https://kit.fontawesome.com/533593bc84.js" crossorigin="anonymous"></script>
   <style>
     body {
       margin: 0;
