--- a/waluty/index.html
+++ b/waluty/index.html
@@ -131,7 +131,7 @@
                             <div class="currency-logo" style="background-image: url('https://i.ibb.co/XbWXD6k/image-5.png');"></div>
                         </div>
                         <div class="currency-data">
-                            <div class="currency-name">KPA</div>
+                            <div class="currency-name">DFA</div>
                         </div>
                     </div>
                     <div class="currency-select">
