--- a/waluty/index.html
+++ b/waluty/index.html
@@ -67,7 +67,7 @@
                                     <div class="currency-logo" style="background-image: url('https://i.ibb.co/K0yMhQ5/image-3.png');"></div>
                                 </div>
                                 <div class="currency-data">
-                                    <div class="currency-name">MAI</div>
+                                    <div class="currency-name">IZM</div>
                                     <div class="currency-description">Marka Iznotiańskia</div>
                                 </div>
                             </div>
@@ -94,7 +94,7 @@
                                     <div class="currency-logo" style="background-image: url('https://i.ibb.co/xDVFRD2/image-1.png');"></div>
                                 </div>
                                 <div class="currency-data">
-                                    <div class="currency-name">KOA</div>
+                                    <div class="currency-name">ADK</div>
                                     <div class="currency-description">Korona Atidalska</div>
                                 </div>
                             </div>
@@ -168,7 +168,7 @@
                                     <div class="currency-logo" style="background-image: url('https://i.ibb.co/K0yMhQ5/image-3.png');"></div>
                                 </div>
                                 <div class="currency-data">
-                                    <div class="currency-name">MAI</div>
+                                    <div class="currency-name">IZM</div>
                                     <div class="currency-description">Marka Iznotiańskia</div>
                                 </div>
                             </div>
@@ -195,7 +195,7 @@
                                     <div class="currency-logo" style="background-image: url('https://i.ibb.co/xDVFRD2/image-1.png');"></div>
                                 </div>
                                 <div class="currency-data">
-                                    <div class="currency-name">KOA</div>
+                                    <div class="currency-name">ADK</div>
                                     <div class="currency-description">Korona Atidalska</div>
                                 </div>
                             </div>
@@ -288,10 +288,10 @@ document.addEventListener('DOMContentLoaded', function() {
         KPA: 1.0,
         DFA: 1.0,
         REG: 1.4,
-        MAI: 1.2,
+        IZM: 1.2,
         REB: 10.0,
         ZLP: 20.0,
-        KOA: 2.5,
+        ADK: 2.5,
         USD: 0.25,
         PLN: 1.0,
     }
