--- a/wiki/pampersia/index.html
+++ b/wiki/pampersia/index.html
@@ -111,7 +111,7 @@
                     </tr>
                     <tr>
                         <th>Całkowita powierzchnia</th>
-                        <td>...</td>
+                        <td>18 325 km²</td>
                     </tr>
                     <tr>
                         <th>Liczba ludności</th>
