--- a/wiki/montecydja/index.html
+++ b/wiki/montecydja/index.html
@@ -107,7 +107,7 @@
                     </tr>
                     <tr>
                         <th>Całkowita powierzchnia</th>
-                        <td>...</td>
+                        <td>8 035 km²</td>
                     </tr>
                     <tr>
                         <th>Liczba ludności</th>
@@ -174,7 +174,7 @@
             </p>
             <h1>Geografia</h1>
             <p>
-                Montecydja jest górzystym państwem położonym w Fangeii Zachodniej. Posiada dostęp do morza. Graniczy z czterema państwami: Halandią na wschodzie, Nadmorzem na zachodzie i Pieczarią oraz Atidalią na północy. Jest jednym z największych państw Fangeii Zachodniej – rozciągłość z północy na południe wynosi 192 km, a ze wschodu na zachód 160 km.
+                Montecydja jest górzystym państwem położonym w Fangeii Zachodniej. Posiada dostęp do morza. Graniczy z czterema państwami: Halandią na wschodzie, Wolnym Miastem Paz na zachodzie i Pieczarią oraz Atidalią na północy. Jest jednym z największych państw Fangeii Zachodniej – rozciągłość z północy na południe wynosi 192 km, a ze wschodu na zachód 160 km.
             </p>
             <p>
                 Mendry zajmują południowo-wschodnią część kraju. Na północ od Mendr znajduje się Wyżyna Montecydysjka. Na północnym zachodzie wyżyna ograniczona jest przez góry Ruja. Większość wschodniego pasma górskiego w Nowym Albertopolu biegnie wzdłuż Femu, który wpływa do Montecydji w pobliżu Kamiennej. 
