--- a/waluty/index.html
+++ b/waluty/index.html
@@ -19,7 +19,7 @@
 <body>
     <header id="pageheader">
     </header>
-    <main class="medium-width">
+    <main class="medium-width flex center">
         <div id="currency-calc-container">
             <h1>Kalkulator Walut</h1>
             <h2>Wybierz waluty i sprawdź kurs.</h2>
