--- a/wiki/nadmorze/index.html
+++ b/wiki/nadmorze/index.html
@@ -107,7 +107,7 @@
                     </tr>
                     <tr>
                         <th>Całkowita powierzchnia</th>
-                        <td>...</td>
+                        <td>42 891 km²</td>
                     </tr>
                     <tr>
                         <th>Liczba ludności</th>
@@ -163,7 +163,7 @@
                 Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.
             </p>
             <p>
-                Powierzchnia administracyjna Nadmorza wynosi xyz km, co daje mu xyz miejsce na świecie. Zamieszkane przez 8,400,000 osób, zajmuje pod względem ludności 1 miejsce na świecie. Nadmorze podzielone jest na 29 prowincji. Jego miastem z największą ludnością i jednocześnie stolicą jest Livorno. Inne metropolie to Montparnasse, Przyptańsk, Bergomir, Królewiec Livorno Nuevo, Jaroszyce, Jarosławice, Filedia, Kollores, Dievno, Najbielańsk. Największą Nadmorską aglomeracją policentryczną jest konurbacja livornijska. Nadmorze jest krajem jednolitym etnicznie - 67% ludności deklaruje narodowość nadmorską.
+                Powierzchnia administracyjna Nadmorza wynosi 42 891 km² km, co daje mu 1 miejsce na świecie. Zamieszkane przez 8,400,000 osób, zajmuje pod względem ludności 1 miejsce na świecie. Nadmorze podzielone jest na 29 prowincji. Jego miastem z największą ludnością i jednocześnie stolicą jest Livorno. Inne metropolie to Montparnasse, Przyptańsk, Bergomir, Królewiec Livorno Nuevo, Jaroszyce, Jarosławice, Filedia, Kollores, Dievno, Najbielańsk. Największą Nadmorską aglomeracją policentryczną jest konurbacja livornijska. Nadmorze jest krajem jednolitym etnicznie - 67% ludności deklaruje narodowość nadmorską.
             </p>
             <p>
                 Nadmorze utrzymuje bardzo wysoki wskaźnik rozwoju społecznego (HDI). W kraju panuje wysoka wolność ekonomiczna. Nadmorze jest demokratycznym państwem z rozwiniętą, wysokodochodową gospodarką i wysokim wskaźnikiem jakości życia. Ponadto rocznie Nadmorze odwiedza 5 milionów turystów (2023), dzięki czemu jest drugim najczęściej odwiedzanym krajem Fangei. Republika Nadmorska jest pierwszą co do wielkości gospodarką na świecie i jedną z najszybciej rozwijających się gospodarek. Według wskaźnika Fangea Peace Index z 2023 roku Nadmorze zajmuje 1. miejsce na świecie pod względem poziomu bezpieczeństwa.
