--- a/wiki/cartland/index.html
+++ b/wiki/cartland/index.html
@@ -34,7 +34,7 @@
 
             </ul>
         </nav>
-        <article>
+        <article class="improvable">
             <header>
                 <div>Cartland</div>
                 <span>21.04.2024</span>
