--- a/wiki/łukasz_lukasox/index.html
+++ b/wiki/łukasz_lukasox/index.html
@@ -34,7 +34,7 @@
 
             </ul>
         </nav>
-        <article>
+        <article class="awarded">
             <header>
                 <div>Łukasz Lukasox</div>
                 <span>04.06.2024</span>
