--- a/index.html
+++ b/index.html
@@ -295,10 +295,10 @@
             <div class="info-tile half" style="display: flex; align-items: center;">
                 <div class="shadow" style="width: 90%; height: 500px; right: -200px; top: -400px;"></div>
                 <div style="width: 100%; height: fit-content;">
-                <div style="background-image: url(https://i.ibb.co/LY5j2qZ/radia.png); background-size: cover; background-position-x: left; background-position-y: top; background-repeat: no-repeat; width: 33%; height: 90%; border-top-left-radius: 1rem; position: absolute; top: 10%; right: 0; opacity: 0.75; z-index: -1;"></div>
-                    <h1 style="text-align: left; margin: 0;">Stacje Radiowe</h1>
-                    <p style="text-align: left; margin-top: 0.5rem; color: rgba(255, 255, 255, 0.75);">Słuchaj muzyki z całego świata</p>
-                    <a style="float: left;" href="https://fangearadio.github.io/fangea/" class="button-href radio"><i class="fa-solid fa-radio"></i>Posłuchaj Radia</a>
+                <div style="background-image: url(https://i.ibb.co/0QFtcSZ/pieniadze4.png); background-size: cover; background-position-x: left; background-position-y: top; background-repeat: no-repeat; width: 60%; height: 100%; border-top-left-radius: 1rem; position: absolute; top: 0; right: 0; opacity: 0.65; z-index: -1;"></div>
+                    <h1 style="text-align: left; margin: 0;">Waluty</h1>
+                    <p style="text-align: left; margin-top: 0.5rem; color: rgba(255, 255, 255, 0.75);">Wygodne przeliczanie walut</p>
+                    <a style="float: left;" href="discord.html" class="button-href radio"><i class="fa-solid fa-coins"></i>Przelicznik Walut</a>
                 </div>
 
             </div>
