--- a/index.html
+++ b/index.html
@@ -298,7 +298,7 @@
                 <div style="background-image: url(https://i.ibb.co/0QFtcSZ/pieniadze4.png); background-size: cover; background-position-x: left; background-position-y: top; background-repeat: no-repeat; width: 60%; height: 100%; border-top-left-radius: 1rem; position: absolute; top: 0; right: 0; opacity: 0.65; z-index: -1;"></div>
                     <h1 style="text-align: left; margin: 0;">Waluty</h1>
                     <p style="text-align: left; margin-top: 0.5rem; color: rgba(255, 255, 255, 0.75);">Wygodne przeliczanie walut</p>
-                    <a style="float: left;" href="discord.html" class="button-href radio"><i class="fa-solid fa-coins"></i>Przelicznik Walut</a>
+                    <a style="float: left;" href="https://grumqy.github.io/fangea/waluty/" class="button-href radio"><i class="fa-solid fa-coins"></i>Przelicznik Walut</a>
                 </div>
 
             </div>
