--- a/index.html
+++ b/index.html
@@ -272,10 +272,10 @@
                         <p style="float: left; margin: 0; color: rgba(255, 255, 255, 0.75);">Poszerz swoją wiedzę o świecie Fangei</p>
                     </div>
                     <div style="width: fit-content; height: fit-content; float: left;">
-                        <a style="float: right;" href="https://grumqy.github.io/fangea/wiki/" class="button-href wiki"><i class="fa-solid fa-book"></i>Przejrzyj Wiki</a>
+                        <a style="float: right;" href="discord.html" class="button-href wiki"><i class="fa-solid fa-book"></i>Przejrzyj Wiki</a>
                     </div>
                 </div>
-                <div style="background-image: url(https://i.ibb.co/7CBKbZQ/image.png); background-size: cover; background-position-x: left; background-position-y: top; background-repeat: no-repeat; width: 450px; height: 230px; border-bottom-left-radius: 1rem; position: absolute; top: 0; right: 0; opacity: 0.8; filter: blur(2px); z-index: -1;"></div>
+                <div style="background-image: url(https://i.ibb.co/84CqrhX/obraz-2024-06-10-181542049.png); background-size: contain; background-position-x: right; background-position-y: bottom; background-repeat: no-repeat; width: 70%; height: 78%; border-bottom-left-radius: 1rem; position: absolute; top: 8%; right: 5%; opacity: 0.8; z-index: -1;"></div>
             </div>
         </div>
         <div class="info-tile-row">
