--- a/wiki/index.html
+++ b/wiki/index.html
@@ -65,6 +65,10 @@
                 <h1>Religie</h1>
                 <li><a href="https://grumqy.github.io/fangea/wiki/ajjbdalizm_religia/">Ajjbdalizm</a></li>
             </ul> 
+            <ul class="article-category">
+                <h1>Ugrupowania</h1>
+                <li><a href="https://grumqy.github.io/fangea/wiki/andannajwa_lidi/">Andannajwa Lidi</a></li>
+            </ul>
         </div>
     </main>
     <script src="/fangea/pageheader.js"></script>
