--- a/wiki/andannajwa_lidi/index.html
+++ b/wiki/andannajwa_lidi/index.html
@@ -137,7 +137,7 @@
                     </figcaption>
                 </figure>
                 <figure>
-                    <img src="https://i.ibb.co/tbv8WZF/image.webp" />
+                    <img src="https://i.ibb.co/R2h1GWT/obraz-2024-06-10-211612067.png" />
                     <figcaption>
                         Wysadzona kamienica pod adresem Nowy Targ 9/11
                     </figcaption>
