--- a/wiki/andannajwa_lidi/index.html
+++ b/wiki/andannajwa_lidi/index.html
@@ -8,9 +8,9 @@
     <title>Andannajwa Lidi - Fangea i inne kontynenty</title>
     <meta property="og:title" content="Andannajwa Lidi">
     <meta name="twitter:title" content="Andannajwa Lidi">
-    <meta name="description" content="Andannajwa Lidi (pol. Wolne Ludy) – nieistniejąca organizacja separatystyczna działająca w 2023 roku na terenie Nowej Łodyczej, założona przez rdzenną ludność miasta w celu utworzenia państwa niezależnego od Pieczarii. Organizacja jest uznawana za terrorystyczną ze względu na przeprowadzone mordy na mieszkańcach Łodyczej w czasie powstania w mieście.">
-    <meta property="og:description" content="Andannajwa Lidi (pol. Wolne Ludy) – nieistniejąca organizacja separatystyczna działająca w 2023 roku na terenie Nowej Łodyczej, założona przez rdzenną ludność miasta w celu utworzenia państwa niezależnego od Pieczarii. Organizacja jest uznawana za terrorystyczną ze względu na przeprowadzone mordy na mieszkańcach Łodyczej w czasie powstania w mieście.">
-    <meta name="twitter:description" content="Andannajwa Lidi (pol. Wolne Ludy) – nieistniejąca organizacja separatystyczna działająca w 2023 roku na terenie Nowej Łodyczej, założona przez rdzenną ludność miasta w celu utworzenia państwa niezależnego od Pieczarii. Organizacja jest uznawana za terrorystyczną ze względu na przeprowadzone mordy na mieszkańcach Łodyczej w czasie powstania w mieście.">
+    <meta name="description" content="Andannajwa Lidi (pol. Wolne Ludy) – nieistniejąca organizacja separatystyczna działająca w 2023 roku na terenie Nowej Łodyczej, założona przez rdzenną ludność miasta w celu utworzenia państwa niezależnego od Pieczarii. Organizacja jest uznawana za terrorystyczną ze względu na przeprowadzone mordy na mieszkańcach Nowej Łodyczej w czasie powstania w mieście.">
+    <meta property="og:description" content="Andannajwa Lidi (pol. Wolne Ludy) – nieistniejąca organizacja separatystyczna działająca w 2023 roku na terenie Nowej Łodyczej, założona przez rdzenną ludność miasta w celu utworzenia państwa niezależnego od Pieczarii. Organizacja jest uznawana za terrorystyczną ze względu na przeprowadzone mordy na mieszkańcach Nowej Łodyczej w czasie powstania w mieście.">
+    <meta name="twitter:description" content="Andannajwa Lidi (pol. Wolne Ludy) – nieistniejąca organizacja separatystyczna działająca w 2023 roku na terenie Nowej Łodyczej, założona przez rdzenną ludność miasta w celu utworzenia państwa niezależnego od Pieczarii. Organizacja jest uznawana za terrorystyczną ze względu na przeprowadzone mordy na mieszkańcach Nowej Łodyczej w czasie powstania w mieście.">
     <meta property="og:image" content="https://i.ibb.co/hyvLCMj/sadfs.webp">
     <meta name="twitter:image" content="https://i.ibb.co/hyvLCMj/sadfs.webp">
     <link
@@ -92,7 +92,7 @@
                 </tbody>
             </table>
             <p>
-                Andannajwa Lidi (pol. Wolne Ludy) – nieistniejąca organizacja separatystyczna działająca w 2023 roku na terenie Nowej Łodyczej, założona przez rdzenną ludność miasta w celu utworzenia państwa niezależnego od Pieczarii. Organizacja jest uznawana za terrorystyczną ze względu na przeprowadzone mordy na mieszkańcach Łodyczej w czasie powstania w mieście.
+                Andannajwa Lidi (pol. Wolne Ludy) – nieistniejąca organizacja separatystyczna działająca w 2023 roku na terenie Nowej Łodyczej, założona przez rdzenną ludność miasta w celu utworzenia państwa niezależnego od Pieczarii. Organizacja jest uznawana za terrorystyczną ze względu na przeprowadzone mordy na mieszkańcach Nowej Łodyczej w czasie powstania w mieście.
             </p>
             <h2>Geneza sporu w Nowej Łodyczej</h2>
             <p>
