--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -107,18 +107,18 @@
                     <th>Tablice rejestracyjne</th>
                     <td>PZ</td>
                 </tr>
-                <tr>
-                    <td colspan="2">
-                        <table class="ibox">
-                            <tbody>
-                                <tr class="plainlink">
-                                    <td><img class="icon large" src="https://i.ibb.co/XJQSsqS/slownik.png"></td>
-                                    <td><span class="modal-opener" id="dictionary-opener">Hasło w słowniku</span></td> 
-                                </tr>
-                            </tbody>
-                        </table>
-                    </td>
-                </tr>
+                    <tr>
+                        <td colspan="2" style="border-top: 1px solid #a2a9b1;">
+                            <table class="ibox">
+                                <tbody>
+                                    <tr class="plainlink">
+                                        <td><img src="https://i.ibb.co/XJQSsqS/slownik.png"></td>
+                                        <td><span class="modal-opener" id="dictionary-opener">Hasło w słowniku</span></td> 
+                                    </tr>
+                                </tbody>
+                            </table>
+                        </td>
+                    </tr>
             </tbody>
         </table>
             <p>
