--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -202,31 +202,31 @@
                     <th>liczba pojedyncza</th>
                 </tr>
                 <tr>
-                    <td>mianownik</td>
+                    <th>mianownik</th>
                     <td>Port Złotice</td>
                 </tr>
                 <tr>
-                    <td>dopełniacz</td>
+                    <th>dopełniacz</th>
                     <td>Portu Złotice</td>
                 </tr>
                 <tr>
-                    <td>celownik</td>
+                    <th>celownik</th>
                     <td>Portowi Złotice</td>
                 </tr>
                 <tr>
-                    <td>biernik</td>
+                    <th>biernik</th>
                     <td>Port Złotice</td>
                 </tr>
                 <tr>
-                    <td>narzędnik</td>
+                    <th>narzędnik</th>
                     <td>Portem Złotice</td>
                 </tr>
                 <tr>
-                    <td>miejscownik</td>
+                    <th>miejscownik</th>
                     <td>Porcie Złotice</td>
                 </tr>
                 <tr>
-                    <td>wołacz</td>
+                    <th>wołacz</th>
                     <td>Porcie Złotice</td>
                 </tr>
             </table>
