--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -232,7 +232,7 @@
             </table>
             <h2>wyrazy pokrewne:</h2>
             <ul>
-            <li>rzecz. złoticanin (mos), złoticanka (ż)
+            <li>rzecz. złoticanin (m), złoticanka (ż)
             <li>przym. złoticki
             </ul>
             <h2>tłumaczenie:</h2>
