--- a/wiki/port_złotice/index.html
+++ b/wiki/port_złotice/index.html
@@ -187,6 +187,7 @@
     <script src="/fangea/article.js"></script>
     <script>
         const dictionaryhtml = `
+            <h1>Port Złotice</h1>
             <h2>wymowa:</h2>
             <p>
                 IPA: [pɔrt zwɔˈt͡ɕit͡sɛ], AS: [port zwot'itse], zjawiska fonetyczne: zmiękcz. t
