--- a/wiki/pampersia/index.html
+++ b/wiki/pampersia/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Rzeczpospolita Pampersia - Fangea i inne kontynenty</title>
+    <title>Pampersia - Fangea i inne kontynenty</title>
     <meta property="og:title" content="Pampersia">
     <meta name="twitter:title" content="Pampersia">
     <meta name="description" content="Pampersia, Rzeczpospolita Pampersia (RP) - Państwo unitarne w Fangei Środkowej. Położone między Morzem Pamperskim na północy a rzeką Bertą na południu, w przeważającej części w dorzeczu Ostry. Od wschodu graniczy z WRN a od południa z USF. Większość północnej granicy Pampersii wyznacza wybrzeże Morza Pamperskiego. Pamperska Wyłączna Strefa Ekonomiczna na Morzu Pamperskim graniczy ze strefami WRN oraz USF.">
@@ -36,10 +36,10 @@
         </nav>
         <article>
             <header>
-                <div>Rzeczpospolita Pampersia</div>
-                <span>03.05.2024</span>
+                <div>Pampersia</div>
+                <span>11.06.2024</span>
             </header>
-            <h1>Rzeczpospolita Pampersia</h1>
+            <h1>Pampersia</h1>
             <table class="infobox">
                 <caption>
                     Rzeczpospolita Pampersia
