--- a/wiki/nadmorze/index.html
+++ b/wiki/nadmorze/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/fangea/local/fangeapage.png" type="image/png">
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Wielka Republika Nadmorska - Fangea i inne kontynenty</title>
+    <title>Nadmorze - Fangea i inne kontynenty</title>
     <meta property="og:title" content="Nadmorze">
     <meta name="twitter:title" content="Nadmorze">
     <meta name="description" content="Nadmorze, Republika Nadmorska, Wielka Republika Nadmorska (WRN) - Państwo unitarne w Fangei Wschodniej, położone na wyspach oraz nad wschodnim wybrzeżem Fangei nad Oceanem Koralowym. Posiada terytoria zamorskie. Od północy Nadmorze graniczy z Pampersią, od zachodu z Pampersią oraz Stanami Zjednoczonymi Fangei Południowej. Od zachodniej strony terytorium Jarpersi graniczy z Unforgivią, od zachodniej strony terytorium Naziemia graniczy z Montecydją. Większość wschodniej granicy Nadmorza wyznacza wybrzeże Oceanu Koralowego. Nadmorska Wyłączna Strefa Ekonomiczna na Oceanie Koralowym graniczy ze strefą USF, zaś na Oceanie Północnym ze Strefami Pampersii, USF oraz Iznotii.">
@@ -36,10 +36,10 @@
         </nav>
         <article>
             <header>
-                <div>Wielka Republika Nadmorska</div>
-                <span>05.05.2024</span>
+                <div>Nadmorze</div>
+                <span>11.06.2024</span>
             </header>
-            <h1>Wielka Republika Nadmorska</h1>
+            <h1>Nadmorze</h1>
             <table class="infobox">
                 <caption>
                     Wielka Republika Nadmorska
